<resources>
    <string name="app_name" translatable="false">Next to me</string>
    <string name="va_aflati">Va aflati in orasul  </string>
    <string name="descopera_oras">Descopera orasul </string>
    <string name="spital">Spital</string>
    <string name="monumente">Atractii turistice</string>
    <string name="mall">Mall</string>
    <string name="restaurant">Restaurant</string>
    <string name="parc">Parc</string>
    <string name="fotografii">Fotografii</string>
    <string name="date_generale">Date Generale</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="user_email_text">"User Email :  "</string>
    <string name="user_id_text">"User Id :  "</string>
    <string name="error_toast_enter_email">"Enter email address!</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="error_toast_enter_password">Enter password!</string>
    <string name="error_toast_short_password">Password too short, enter minimum 6 characters!</string>
    <string name="error_toast_auth_failed">Authentication failed.</string>
    <string name="toast_auth_completed">createUserWithEmail:onComplete:</string>
    <string name="btn_new_post_text">Add new post</string>

    <string name="camera_button_text">Upload</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="success">Success</string>
    <string name="log_out">Log out</string>

    <string name="take_photo_from_camera">Take from camera</string>
    <string name="choose_photo_from_gallery">Choose from gallery</string>
    <string name="dialog_choose_cancel">Cancel</string>
    <string name="add_new_post">Add new post</string>
    <string name="uploading">Uploading...</string>

    <string name="error_toast_taking_vid_failed">Taking video failed.</string>
    <string name="error_toast_not_fetch_user">Error: could not fetch user.</string>
    <string name="error_toast_upload_failed">Error: upload failed</string>

    <string name="post_title_hint">Title</string>
    <string name="post_link_hint">Post link</string>
    <string name="user_info">User info</string>
    <string name="dialog_info_title">Current user info</string>
    <string name="db_on_complete_msg" translatable="false">postTransaction:onComplete:</string>
    <string name="must_pass_extra_key">Must pass EXTRA_POST_KEY</string>
    <string name="failed_load_post">Failed to load post.</string>
    <string name="failed_load_comments">Failed to load comments.</string>
    <string name="on_cancelled_err" translatable="false">onCancelled:</string>
    <string name="my_post_text">My First Post</string>
    <string name="field_comment_hint_text">Write a comment...</string>
    <string name="btn_post_comment_text">Post</string>
    <string name="loading_text">Loading...</string>
    <string name="post_author_text" translatable="false">someauthor@email.com</string>
    <string name="post_body_text" translatable="false">test text text link</string>
    <string name="comment_author_text" translatable="false">Some Name</string>
    <string name="comment_body_text" translatable="false">This is the comment text..</string>
    <string name="share_intent_subject">Check out this video!</string>
    <string name="share_intent_title">Share via</string>
    <string name="empty_posts_list_text">The post list is empty.\nAdd your post.</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="buna">Bine ai revenit, </string>


    <string-array name="splitterLanguage">
        <item>Select language</item>
        <item>Romana</item>
        <item>Engleza</item>
        <item>Spaniola</item>
        <item>Franceza</item>
    </string-array>
</resources>
