<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/va_aflati"
            android:textSize="24dp"
            android:id="@+id/introducere"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/City"
            android:layout_toRightOf="@id/introducere"/>
    </RelativeLayout>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    tools:context=".MapsActivity" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descopera_oras"
        android:textSize="30dp"
        android:textAlignment="center"
       />
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:background="@drawable/spital"
        android:text="@string/spital"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/spital"/>
    <Button
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:background="@drawable/m1"
        android:text="@string/monumente"
        android:id="@+id/monumente"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_toRightOf="@id/spital"
        />
    <Button
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:background="@drawable/mall"
        android:text="@string/mall"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:id="@+id/mall"
        android:layout_below="@id/spital"/>
    <Button
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:background="@drawable/restaurant"
        android:text="@string/restaurant"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:id="@+id/restaurant"
        android:textSize="20dp"
        android:layout_toRightOf="@id/mall"
        android:layout_below="@id/monumente"
        />
    <Button
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:background="@drawable/parc"
        android:text="@string/parc"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:id="@+id/parc"
        android:layout_below="@id/mall"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/afisare"/>
</RelativeLayout>
</ScrollView>
</LinearLayout>
